# crypto-commitment-cpp

./: CMakeLists.txt  README.md
cmake/: CryptoCommitmentConfig.cmake.in
examples/: CMakeLists.txt  commitment-test.cpp
src/: CMakeLists.txt
src/crypto-commitment/: commitment.cpp  commitment.h  commitment.pb.cc  commitment.pb.h  kgd_curve_point.cpp  kgd_curve_point.h  kgd_number.cpp  kgd_number.h
test/: CMakeLists.txt  commitment-test.cpp
